--- a/Writeup.html
+++ b/Writeup.html
@@ -123,14 +123,16 @@ data = cleanupData(raw)</code></pre>
 testIndex = createDataPartition(data$classe, p = 0.7, list=FALSE)
 train = data[-testIndex,]
 test = data[testIndex,]</code></pre>
-<p>For best accurancy without requirement of good interpretaion the best choice will be random forests algorithm (at least among RF, GBM and SVM. Take a look at code.R for details).</p>
-<pre class="r"><code>predictor &lt;- randomForest(classe ~ ., data = train)</code></pre>
+<p>In order to achieve the best accuracy without requirement of good model interpretaion the best choice will be random forests algorithm (at least among RF, GBM and SVM. Look for <a href="https://github.com/2xmax/predmachlearn-coursera/blob/master/code.R">code.R</a> for details).</p>
+<pre class="r"><code># predictor &lt;- train(classe ~ ., data = train, method=&quot;gbm&quot;) # Stochastic Gradient Boosting - 95.99 % accuracy rate
+#predictor &lt;- train(classe ~ ., data = train, method=&quot;svmRadial&quot;) # Support Vector Machines - - 88.97% accuracy rate
+predictor &lt;- randomForest(classe ~ ., data = train)</code></pre>
 </div>
 <div id="conclusion" class="section level2">
 <h2>Conclusion</h2>
 <pre class="r"><code>testPred = predict(predictor, newdata = test)
-accurancy = confusionMatrix(test$classe, testPred)$overall[1]</code></pre>
-<p>It can be concluded that the algorithm’s accurancy is equal to 98.37% and the out-of-sample error is 1.63%.</p>
+accuracy = confusionMatrix(test$classe, testPred)$overall[1]</code></pre>
+<p>It can be concluded that the algorithm’s accuracy is equal to 98.37% and the out-of-sample error is 1.63%.</p>
 </div>
 </div>
 
